--- a/css/metrize.css
+++ b/css/metrize.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'Metrize-Icons';
-  src:         url('../fonts/Metrize-Icons.eot');
-  src:         url('../fonts/Metrize-Icons.eot?#iefix') format('embedded-opentype'),
-               url('../fonts/Metrize-Icons.woff') format('woff'),
-               url('../fonts/Metrize-Icons.ttf') format('truetype'),
-               url('../fonts/Metrize-Icons.svg#Metrize-Icons') format('svg');
+  src:         url('../fonts/icons/Metrize-Icons.eot');
+  src:         url('../fonts/icons/Metrize-Icons.eot?#iefix') format('embedded-opentype'),
+               url('../fonts/icons/Metrize-Icons.woff') format('woff'),
+               url('../fonts/icons/Metrize-Icons.ttf') format('truetype'),
+               url('../fonts/icons/Metrize-Icons.svg#Metrize-Icons') format('svg');
   font-weight: normal;
   font-style:  normal;
 }
