--- a/css/style.css
+++ b/css/style.css
@@ -664,7 +664,7 @@ nav {
 
 /* 08. TEAM SETTINGS ================================================== */
 
-/* About the annimation on hover of each member please refer to the hoverex-all.css file */
+/* About the annimation on hover of each member please refer to the hoverex-all.min.css file */
 
 /* Section */
 
